Correção de erros com as classes 'Client', criação da documentaçã da API para 'Product', refatoração do código.
