# app/Models/Product.php
@@ -13,7 +13,9 @@ use Illuminate\Support\Carbon;
  * @property int         $id
  * @property string      $name
  * @property decimal     $price
- * @property string      $photo
+ * @property string      $photo_original_name
+ * @property string      $photo_name
+ * @property string      $photo_destination_path
  * @property int         $type_id
  * @property Carbon|null $created_at
  * @property Carbon|null $updated_at
@@ -30,15 +32,18 @@ class Product extends Model
     protected $fillable = [
         'name',
         'price',
-        'photo'
+        'photo_original_name',
+        'photo_name',
+        'photo_destination_path',
+        'type_id'
     ];
 
     protected $casts = [
         'id',
         'type_id',
-        'updated_at'=>'Timestamp',
-        'deleted_at'=>'Timestamp',
-        'created_at'=>'Timestamp'
+        'updated_at'=>'datetime:Y-m-d H:i:s',
+        'deleted_at'=>'datetime:Y-m-d H:i:s',
+        'created_at'=>'datetime:Y-m-d H:i:s'
     ];
 
     protected $dates = [
